# lish

./: Cargo.toml  Makefile  README.md  lish  shell.nix
scripts/: run-repl
src/: ast.rs  engine.rs  env.rs  error.rs  evaluator.rs  lexer.rs  lib.rs  lisp_evaluator.rs  main.rs  parser.rs  printer.rs  readliner.rs  repl.rs  shell_evaluator.rs  token.rs  types.rs
src/core/: env.rs  environment.rs  file.rs  hash.rs  list.rs  math.rs  mod.rs  printer.rs  reader.rs  string.rs
src/lisp/: engine.rs  evaluator.rs  lexer.rs  mod.rs  parser.rs  token.rs
src/shell/: engine.rs  error.rs  evaluator.rs  lexer.rs  mod.rs  parser.rs  token.rs
src/shell/builtins/: cd.rs  echo.rs  mod.rs
stdlib/: stdlib.lish
tests/: do.rs  eval.rs  functions.rs  hash.rs  math.rs  printer.rs  string.rs
tests/lish/: aliases.lish  cd.lish  environment.lish  repl.lish  simple_lisp.lish  simple_shell.lish
