[package]
name = "lish"
version = "0.1.0"
authors = ["Juan Ibiapina <juanibiapina@gmail.com>"]

[dependencies]
rustyline = "*"
libc = "*"
regex = "*"
lazy_static = "*"

[dev-dependencies]
maplit = "*"

[dependencies.nom]
git = "https://github.com/Geal/nom.git"
features = ["regexp", "verbose-errors"]
